Now assigning to random house, but still need to fix problem with names always displaying in house1

--- a/sorting_hat.html
+++ b/sorting_hat.html
@@ -17,20 +17,25 @@
     <h1>Sorting Hat</h1>
     
     <div class="container">
-        <div class="house1 col-md-2">
+        <div class="house col-md-2">
             Gryffindor
+            <div id="Gryffindor"> <!--something to go here--> </div>
         </div>
-        <div class="house2 col-md-2">
+        <div class="house col-md-2">
             Hufflepuff
+            <div id="Hufflepuff"> <!--something to go here--> </div>
         </div>
-        <div class="house3 col-md-2">
+        <div class="house col-md-2">
             Ravenclaw
+            <div id="Ravenclaw"> <!--something to go here--> </div>
         </div>
-        <div class="house4 col-md-2">
+        <div class="house col-md-2">
             Slytherin
+            <div id="Slytherin"> <!--something to go here--> </div>
         </div>
-        <div class="house5 col-md-2">
+        <div class="house col-md-2">
             Dumbledore's Army
+            <div id="Dumbledore"> <!--something to go here--> </div>
         </div>
     </div>
     <br>
@@ -82,7 +87,11 @@
             }
         });
 
-        var namesArray = [];
+        var house1 = [];
+        var house2 = [];
+        var house3 = [];
+        var house4 = [];
+        var house5 = [];
         document.getElementById("set_student_name").addEventListener("click", function() {
             // // Store div object where we display name
             // var displayName = document.getElementById("nameField");
@@ -91,12 +100,52 @@
             var newName = document.getElementById("student_name").value;
 
             if (newName) {
-                // 
-                // Add entered name to names array
-                namesArray.push(newName);
+                // Create variables that store the div object where we'll display names in each house
+                var displayHouse1 = document.getElementById("Gryffindor");
+                var displayHouse2 = document.getElementById("Hufflepuff");
+                var displayHouse3 = document.getElementById("Ravenclaw");
+                var displayHouse4 = document.getElementById("Slytherin");
+                var displayHouse5 = document.getElementById("Dumbledore");
 
-                // Display new names array
-                document.getElementById("nameField").innerHTML = namesArray;
+                // Generate a random number and convert it to a string
+                var randomNumber = Math.round(getRandomArbitrary(1, 6)).toString();
+
+                // Declare a variable called house
+                var house = "house";
+
+                // Declare a variable called randomHouse that concatenates "house" with the random number string
+                var randomHouse = house.concat(randomNumber);
+                console.log(randomHouse);
+
+                // Push newName to the randomly chosen house/array
+                if (randomHouse = "house1") {
+                    house1.push(newName);
+                    // Update array
+                    displayHouse1.innerHTML = house1;
+
+                } else if (randomHouse = "house2") {
+                    house2.push(newName);
+                    // Update array
+                    displayHouse2.innerHTML = house2;
+                } else if (randomHouse = "house3") {
+                    house3.push(newName);
+                    // Update array
+                    displayHouse3.innerHTML = house3;
+                } else if (randomHouse = "house4") {
+                    house4.push(newName);
+                    // Update array
+                    displayHouse4.innerHTML = house4;
+                } else {
+                    house5.push(newName);
+                    // Update array
+                    displayHouse5.innerHTML = house5;
+                }
+                
+                console.log(house1);
+                console.log(house2);
+                console.log(house3);
+                console.log(house4);
+                console.log(house5);
 
                 // Reset the input field ("student_name")
                 document.getElementById("student_name").value = "";
